--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "http-errors": "~1.6.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
