--- a/package.json
+++ b/package.json
@@ -1,24 +1,1 @@
-{
-  "name": "wlbx",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "bootstrap": "^5.2.0",
-    "dotenv": "^16.0.1",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-fileupload": "^1.4.0",
-    "express-validator": "^6.14.2",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.21.3"
-  },
-  "devDependencies": {
-    "sequelize-cli": "^6.4.1"
-  }
-}
+{"name":"wlbx","version":"0.0.0","private":true,"scripts":{"start":"node ./bin/www"},"dependencies":{"bcrypt":"^5.0.1","bootstrap":"^5.2.0","dotenv":"^16.0.1","ejs":"~2.6.1","express":"~4.16.1","express-fileupload":"^1.4.0","express-validator":"^6.14.2","http-errors":"~1.6.3","jsonwebtoken":"^8.5.1","mysql2":"^2.3.3","pg":"^8.8.0","pg-hstore":"^2.3.4","sequelize":"^6.21.3"},"devDependencies":{"sequelize-cli":"^6.4.1"}}
