--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 #require('crypto').randomBytes(16).toString('hex')
 #CLI -> heroku pg:psql postgresql-cubed-12057 --app damp-thicket-02248
+#psql -Uwnofasloisbizo -hec2-34-225-159-178.compute-1.amazonaws.com -dd8ug3j66bcimmc
 ACCESS_TOKEN=c2d407179c04372e9d7a90f479ddc3bc
 REFRESH_TOKEN=345f2f204c410fd09497f21accecb466
 POSTGRES_DB=d8ug3j66bcimmc
